--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@
     background-image: url("../images/background-image.png");
     };
 
-#main {
+.main {
     padding: 20px !important;
     width: 70%;
 };
@@ -14,6 +14,16 @@
 
 nav {
     font-size: 24px;
+
+}
+
+.d-flex {
+    height: 75px;
+}
+
+.name {
+    cursor: pointer;
+    color: black;
 }
 /* .card-img-top{
     max-width: 10rem;
