--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,21 @@
 #wrapper {
-    background-image: url("../images/background-image.png");
+    background-image: url("../images/bg-1.jpg");
     };
+    
+/* .card-container {
+    background-image: url("../images/bg-2.jpg") !important;
+} */
+
+@media only screen and (max-width: 768px) {
+    .d-flex {
+        height: 110px;
+    }
+  }
 
 #footer {
     height: 40px !important;
     line-height: 40px !important;
+    margin-top: 40px;
 };
 
 nav {
@@ -13,12 +24,30 @@ nav {
 
 .d-flex {
     height: 75px;
+    position: absolute;
+}
+
+.main {
+    position: relative;
+    top: 40px;
 }
 
 .name {
     cursor: pointer;
-    color: black;
 }
+
 /* .card-img-top{
     max-width: 10rem;
 } */
+
+.link {
+    text-decoration: underline;
+}
+
+.link:hover {
+    color: rgb(71, 5, 71)!important
+}
+
+.name:hover {
+    color: rgb(71, 5, 71)!important
+}
