updated layout, added new tiles to portfolio

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,11 @@
 #wrapper {
     background-image: url("../images/bg-1.jpg");
-    };
-    
-/* .card-container {
-    background-image: url("../images/bg-2.jpg") !important;
-} */
+
+};
+
+#bio {
+    font-size: 18px !important;
+}
 
 @media only screen and (max-width: 768px) {
     .d-flex {
@@ -35,10 +36,6 @@ nav {
 .name {
     cursor: pointer;
 }
-
-/* .card-img-top{
-    max-width: 10rem;
-} */
 
 .link {
     text-decoration: underline;
